<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/atras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/atras"
            android:src="@drawable/atras" />

        <ImageView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home"
            android:src="@drawable/home" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:background="@drawable/milenio" >

            <TextView
                android:id="@+id/clima"
                style="@style/grados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/clima" />

            <ImageView
                android:id="@+id/imgclima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="@string/clima"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/minmax"
                style="@style/gradosr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/clima" />
        </LinearLayout>

        <ImageView
            android:id="@+id/impreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/impreso"
            android:src="@drawable/impreso" />

        <ImageView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tv"
            android:src="@drawable/television" />

        <ImageView
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/radio"
            android:src="@drawable/radio" />

        <ImageView
            android:id="@+id/buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/buscar"
            android:src="@drawable/search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/secciones"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/secciones"
            android:prompt="@string/blank" />

        <Spinner
            android:id="@+id/firmas"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/firmas"
            android:prompt="@string/firmas" />

        <Spinner
            android:id="@+id/ediciones"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ediciones"
            android:prompt="@string/ediciones" />

        <Spinner
            android:id="@+id/otros"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/otros"
            android:prompt="@string/otros" />

        <Spinner
            android:id="@+id/topicos"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/topicos"
            android:prompt="@string/radio" />

        <ImageView
            android:id="@+id/favo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/favoritos"
            android:contentDescription="@string/favoritos"
            android:src="@drawable/favoritos" />

        <Spinner
            android:id="@+id/opciones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/mimilenio" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.20"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/p1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank" />

            <ExpandableListView
                android:id="@+id/esecciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ExpandableListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/encabezadogris" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.20"
            android:orientation="vertical" >

            <MediaController
                android:id="@+id/mediaController1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cuadromultimedia" >

                <LinearLayout
                    android:layout_width="344dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical" >

                    <VideoView
                        android:id="@+id/videoView1"
                        android:layout_width="273dp"
                        android:layout_height="194dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp" >

                        <ImageButton
                            android:id="@+id/imageButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFF"
                            android:contentDescription="@string/fotos"
                            android:src="@drawable/fotosonl" />

                    </LinearLayout>

                </LinearLayout>

            </MediaController>

            <Gallery
                android:id="@+id/gallery1"
                android:layout_width="match_parent"
                android:layout_height="113dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/fondoaficion" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/publicidad411" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:orientation="vertical" >
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
